--- a/chat.html
+++ b/chat.html
@@ -170,7 +170,7 @@
 
         // Display username on page load
         if (username) {
-            alert(Welcome, ${username}!);
+            alert(`Welcome, ${username}!`);
         }
 
         // Join the global room initially
@@ -179,7 +179,7 @@
         document.getElementById("createButton").addEventListener("click", () => {
             const roomId = prompt("Enter room code to create:");
             if (roomId) {
-                fetch(${serverUrl}/api/v2/tunnel/checkRoomExists, {
+                fetch(`${serverUrl}/api/v2/tunnel/checkRoomExists`, {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ id: roomId })
@@ -209,7 +209,7 @@
             if (newUsername) {
                 username = newUsername;
                 localStorage.setItem('username', username);  // Save new username to localStorage
-                alert(Username changed to: ${username});
+                alert(`Username changed to: ${username}`);
             }
         });
 
@@ -219,7 +219,7 @@
         });
 
         function createRoom(roomId) {
-            fetch(${serverUrl}/api/v2/tunnel/create, {
+            fetch(`${serverUrl}/api/v2/tunnel/create`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ id: roomId })
@@ -230,7 +230,7 @@
                     return;
                 }
                 currentRoom = roomId;
-                roomInfo.innerHTML = Connected to room: <strong>${currentRoom}</strong>;
+                roomInfo.innerHTML = `Connected to room: <strong>${currentRoom}</strong>`;
                 joinRoom(currentRoom);
             })
             .catch(console.error);
@@ -238,7 +238,7 @@
 
         function joinRoom(roomId) {
             currentRoom = roomId;
-            roomInfo.innerHTML = Connected to room: <strong>${currentRoom}</strong>;
+            roomInfo.innerHTML = `Connected to room: <strong>${currentRoom}</strong>`;
             messagesDiv.innerHTML = ""; // Clear previous messages
 
             // Close the previous EventSource connection if it exists
@@ -247,7 +247,7 @@
             }
 
             // Fetch and display the last 5 messages before joining the chat
-            fetch(${serverUrl}/api/v2/tunnel/messages?roomId=${currentRoom}&count=5)
+            fetch(`${serverUrl}/api/v2/tunnel/messages?roomId=${currentRoom}&count=5`)
                 .then(response => response.json())
                 .then(data => {
                     // Display the last 5 messages
@@ -266,7 +266,7 @@
             sendJoinMessage();
 
             // Set up the EventSource to listen for messages in the current room
-            eventSource = new EventSource(${serverUrl}/api/v2/tunnel/stream?id=${currentRoom}&subChannel=main);
+            eventSource = new EventSource(`${serverUrl}/api/v2/tunnel/stream?id=${currentRoom}&subChannel=main`);
 
             eventSource.onmessage = (event) => {
                 const message = document.createElement("div");
@@ -281,12 +281,12 @@
         }
 
         function sendJoinMessage() {
-            const joinMessage = ${username} joined the chat;
-            fetch(${serverUrl}/api/v2/tunnel/send, {
+            const joinMessage = `${username} joined the chat`;
+            fetch(`${serverUrl}/api/v2/tunnel/send`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    id: currentRoom,  // Room ID
+                    id: currentRoom,
                     content: joinMessage,
                     subChannel: "main"
                 })
@@ -308,16 +308,15 @@
                 return;
             }
 
-            const formattedMessage = ${username}: ${message};
+            const formattedMessage = `${username}: ${message}`;
 
-            // Ensure the message is sent to the current room
-            fetch(${serverUrl}/api/v2/tunnel/send, {
+            fetch(`${serverUrl}/api/v2/tunnel/send`, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    id: currentRoom, // Ensure the room ID corresponds to the current room
+                    id: currentRoom,
                     content: formattedMessage,
-                    subChannel: "main" // Still using a subChannel, you can change it if needed
+                    subChannel: "main"
                 })
             })
             .then(response => {
@@ -330,37 +329,5 @@
             .catch(console.error);
         }
     </script>
-<script>
-    // Function to send a "ping" to the external server
-    async function pingServer() {
-        try {
-            const response = await fetch('https://talk.absalt.com/', {
-                method: 'GET',  // You can also use POST if required by the server
-                headers: {
-                    'Content-Type': 'application/json',
-                }
-            });
-
-            if (response.ok) {
-                console.log('Ping sent to https://talk.absalt.com/ successfully!');
-            } else {
-                console.error('Failed to send ping to server:', response.statusText);
-            }
-        } catch (error) {
-            console.error('Error sending ping to server:', error);
-        }
-    }
-
-    // Call pingServer when the page is fully loaded
-    document.addEventListener('DOMContentLoaded', () => {
-        pingServer(); // Send ping when the page is loaded
-    });
-
-    // Optionally, send ping every 30 seconds
-    setInterval(() => {
-        pingServer(); // Send ping every 30 seconds (30000ms)
-    }, 30000);
-</script>
-
 </body>
 </html>
