--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 description: 'Play as a monkey making a store'
             },
             {
-                url: 'game.html?game=Bit%20Plane',
+                url: 'game.html?game=Bit%20planes',
                 image: './img/plane.jpg',
                 title: 'Bit Plane',
                 description: 'Play an awesome plane fighting game'
