fix it for real this time

--- a/game.html
+++ b/game.html
@@ -165,7 +165,7 @@
     </div>
     <div id="particles-js"></div> <!-- Particles.js container -->
     <div class="content">
-        <div class="iframe-container">
+        <div class="iframe-container" id="iframe-container">
             <iframe id="gameIframe" src="" frameborder="0"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen()"></button>
             <button class="picture_in_picture-button" onclick="openPictureInPicture()"></button>
