add right alignment to game element styling

--- a/game.html
+++ b/game.html
@@ -239,6 +239,7 @@
                     overflow: hidden;
                     display: block;
                     z-index: 1000;
+                    right: 0;
                 }
             `;
             
