--- a/chat.html
+++ b/chat.html
@@ -195,7 +195,7 @@
             if(!isSystem) isSystem = false;
             let messagesContainer = document.getElementById('messages');
             let messageElement = document.createElement('div');
-            messageElement.innerText = `Daddy ${username}-kun: ${message}`;
+            messageElement.innerText = `Daddy ${username}: ${message}`;
             if(isSystem) messageElement.style.color = '#f00';
             messagesContainer.appendChild(messageElement);
             messagesContainer.scrollTop = messagesContainer.scrollHeight;
@@ -242,6 +242,11 @@
             window.chatConnection.init();
             window.chatConnection.create();
             window.chatConnection.connect();
+            document.addEventListener("keydown", function(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+              }
+            });
         });
     </script>
 </body>
