--- a/chat.html
+++ b/chat.html
@@ -110,6 +110,7 @@
             border: none;
             background-color: #333;
             color: #f5f5f5;
+            maxlength: = 10;
         }
 
         #sendButton, #createButton, #joinButton, #setUsernameButton {
