--- a/chat.html
+++ b/chat.html
@@ -110,7 +110,6 @@
             border: none;
             background-color: #333;
             color: #f5f5f5;
-            maxlength: = 10;
         }
 
         #sendButton, #createButton, #joinButton, #setUsernameButton {
@@ -146,7 +145,7 @@
         <div id="roomInfo">Connected to room: <strong>global</strong></div>
         <div id="messages"></div>
         <div id="inputContainer">
-            <input type="text" id="messageInput" placeholder="Type a message...">
+            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "10">
             <button id="sendButton" onclick="sendMessage()">Send</button>
         </div>
         <div style="margin-top: 10px;">
