--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,11 @@
             display: flex;
             flex-direction: column;
         }
-
+        #charCount {
+            margin-left: 10px;
+            font-size: 0.8em;
+            color: #666;
+        }     
         #particles-js {
             position: absolute;
             top: 0;
@@ -145,7 +149,8 @@
         <div id="roomInfo">Connected to room: <strong>global</strong></div>
         <div id="messages"></div>
         <div id="inputContainer">
-            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "1000">
+            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200">
+            <span id="charCount">0 / 200</span>
             <button id="sendButton" onclick="sendMessage()">Send</button>
         </div>
         <div style="margin-top: 10px;">
@@ -248,6 +253,16 @@
               }
             });
         });
+    </script>
+    <script>
+      const input = document.getElementById('myInput');
+      const charCount = document.getElementById('charCount');
+      const maxLength = input.getAttribute('maxlength');
+    
+      input.addEventListener('input', function() {
+        const currentLength = this.value.length;
+        charCount.textContent = `${currentLength} / ${maxLength}`;
+      });
     </script>
 </body>
 </html>
