--- a/chat.html
+++ b/chat.html
@@ -150,8 +150,7 @@
         <div id="messages"></div>
         <div id="inputContainer">
             <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200">
-            <span id="charCount">0 / 200</span>
-            <button id="sendButton" onclick="sendMessage()">Send</button>
+            <button id="sendButton" onclick="sendMessage()">Send  <span id="charCount">0 / 200</span></button>
         </div>
         <div style="margin-top: 10px;">
             <button id="createButton" onclick="createOrJoinRoom()">Create or Join a Room</button>
