--- a/chat.html
+++ b/chat.html
@@ -150,7 +150,8 @@
         <div id="messages"></div>
         <div id="inputContainer">
             <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200">
-            <button id="sendButton" onclick="sendMessage()">Send  <span id="charCount">0 / 200</span></button>
+            <span id="charCount">0 / 200</span>
+            <button id="sendButton" onclick="sendMessage()">Send</button>
         </div>
         <div style="margin-top: 10px;">
             <button id="createButton" onclick="createOrJoinRoom()">Create or Join a Room</button>
@@ -254,7 +255,7 @@
         });
     </script>
     <script>
-      const input = document.getElementById('myInput');
+      const input = document.getElementById('messageInput');
       const charCount = document.getElementById('charCount');
       const maxLength = input.getAttribute('maxlength');
     
