--- a/chat.html
+++ b/chat.html
@@ -22,7 +22,7 @@
         #charCount {
             margin-left: 10px;
             font-size: 0.8em;
-            color: #666;
+            color: #FF0000;
         }     
         #particles-js {
             position: absolute;
@@ -149,8 +149,7 @@
         <div id="roomInfo">Connected to room: <strong>global</strong></div>
         <div id="messages"></div>
         <div id="inputContainer">
-            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200">
-            <span id="charCount">0 / 200</span>
+            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200"><span id="charCount">0 / 200</span></input>
             <button id="sendButton" onclick="sendMessage()">Send</button>
         </div>
         <div style="margin-top: 10px;">
