--- a/chat.html
+++ b/chat.html
@@ -21,8 +21,8 @@
         }
         #charCount {
             margin-left: 10px;
-            font-size: 0.8em;
-            color: #FF0000;
+            font-size: 1em;
+            color: #FFFFFF;
         }     
         #particles-js {
             position: absolute;
