--- a/chat.html
+++ b/chat.html
@@ -149,8 +149,8 @@
         <div id="roomInfo">Connected to room: <strong>global</strong></div>
         <div id="messages"></div>
         <div id="inputContainer">
-            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200"><span id="charCount">0 / 200</span></input>
-            <button id="sendButton" onclick="sendMessage()">Send</button>
+            <input type="text" id="messageInput" placeholder="Type a message..." maxlength = "200">
+            <button id="sendButton" onclick="sendMessage()">Send <span id="charCount">0 / 200</span></button>
         </div>
         <div style="margin-top: 10px;">
             <button id="createButton" onclick="createOrJoinRoom()">Create or Join a Room</button>
