--- a/chat.html
+++ b/chat.html
@@ -171,7 +171,7 @@
             if (!isSystem) isSystem = false;
             let messagesContainer = document.getElementById('messages');
             let messageElement = document.createElement('div');
-            messageElement.innerText = `Daddy ${username}: ${message}`;
+            messageElement.innerText = `${username}: ${message}`;
             document.getElementById('charCount').textContent = `0 / 200`;
             if (isSystem) messageElement.style.color = '#f00';
             messagesContainer.appendChild(messageElement);
