--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+6<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -71,7 +71,7 @@
         }
         #chatContainer {
             width: 90%;
-            max-width: 100px;
+            max-width: 1600px;
             margin: 0 auto;
             position: relative;
             z-index: 1;
@@ -92,6 +92,7 @@
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
+            width: 90%;
         }
         #inputContainer {
             display: flex;
