--- a/chat.html
+++ b/chat.html
@@ -92,7 +92,7 @@
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
-            width: 90%;
+            width: 1600px;
         }
         #inputContainer {
             display: flex;
