--- a/chat.html
+++ b/chat.html
@@ -88,11 +88,10 @@
             border: 1px solid #ddd;
             padding: 10px;
             height: 300px;
-            overflow-y: scroll;
+            overflow-y: wrap;
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
-            width: 1600px;
         }
         #inputContainer {
             display: flex;
