--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+6<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -88,7 +88,8 @@
             border: 1px solid #ddd;
             padding: 10px;
             height: 300px;
-            overflow-y: wrap;
+            overflow-y: scroll;
+            overflow-x: wrap;
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
