--- a/chat.html
+++ b/chat.html
@@ -83,6 +83,7 @@
         #roomInfo {
             margin-bottom: 15px;
             color: #ddd;
+            width: 90%;
         }
         #messages {
             border: 1px solid #ddd;
