--- a/chat.html
+++ b/chat.html
@@ -83,17 +83,16 @@
         #roomInfo {
             margin-bottom: 15px;
             color: #ddd;
-            width: 90%;
         }
         #messages {
             border: 1px solid #ddd;
             padding: 10px;
             height: 300px;
             overflow-y: scroll;
-            overflow-x: wrap;
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
+            white-space: normal; 
         }
         #inputContainer {
             display: flex;
