--- a/chat.html
+++ b/chat.html
@@ -87,11 +87,12 @@
         #messages {
             border: 1px solid #ddd;
             padding: 10px;
-            height: auto; /* Allow height to adjust based on content */
-            overflow-y: hidden; /* Prevent vertical scrolling */
+            height: 300px;
+            overflow-y: scroll;
             margin-bottom: 10px;
             background-color: #222;
             border-radius: 5px;
+            white-space: normal; 
         }
         #inputContainer {
             display: flex;
