--- a/About.html
+++ b/About.html
@@ -112,7 +112,7 @@
         <div id="particles-js"></div> <!-- Particles.js container -->
     <div class="content">
         <p>Hey, this is a passion project I hope you enjoy.</p>
-        <p>Send feedback, ideas, game requests, and bugs to the owners on Discord here: "@redben1002" and "@execur539"</p>
+        <p>Send feedback, ideas, game requests, and bugs to the devs on Discord here: "@redben1002" and "@execur539"</p>
     </div>
 </body>
 </html>
