--- a/About.html
+++ b/About.html
@@ -100,6 +100,7 @@
     </style>
 </head>
 <body>
+    <script src="check.js"></script>
     <div class="topbar">
         <h1>About Void's Games</h1>
         <div class="nav-buttons">
