--- a/password.html
+++ b/password.html
@@ -12,6 +12,6 @@
         <button type="submit">Submit</button>
     </form>
     <p id="message"></p>
-    <script src="password.js"></script>
+    <script src="js/password.js"></script>
 </body>
 </html>
